--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,35 @@
 :root {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    line-height: 1.5;
-    font-weight: 400;
 
-    color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
+    color: #2b2c30;
+    background-color: #f8f9fd;
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+
+    --color-white: #ffffff;
+    --color-purple: #6d6af7;
+    --color-green-1: #a6f1e0;
+    --color-green-2: #84eac0;
+    --color-green-3: #73c7c7;
+
+    --radius-3: 3px;
+    --radius-10: 10px;
+
+    --font-size-5: 5px;
+    --font-size-7: 7px;
+    --font-size-10: 10px;
+    --font-size-15: 15px;
+    --font-size-20: 20px;
+    --font-size-40: 40px;
+    --font-size-50: 50px;
+
+    --font-weight-bold: bold;
+    --font-weight-black: 900;
+
+    --shadow-normal: 0px 2px 3px 0px rgba(0, 0, 0, 0.35);
 }
 
 body {
@@ -18,5 +37,5 @@ body {
     min-width: 320px;
     width: 100vw;
     overflow-x: hidden;
-    min-height: 96vh;
+    height: 100vh;
 }
