--- a/src/components/elements/Button/index.css
+++ b/src/components/elements/Button/index.css
@@ -12,13 +12,13 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-
     position: relative;
+    padding: 15px 80px;
 }
 
 .icon {
     position: absolute;
-    left: 20px;
+    left: 15px;
     color: var(--color-purple);
 }
 
