--- a/src/pages/Top/index.css
+++ b/src/pages/Top/index.css
@@ -8,7 +8,7 @@
 }
 
 .top-container-box {
-    width: 300px;
+    width: fit-content;
     display: flex;
     flex-direction: column;
     gap: 112px;
