measureページの作成

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,8 @@
     --font-size-10: 10px;
     --font-size-15: 15px;
     --font-size-20: 20px;
+    --font-size-25: 25px;
+    --font-size-30: 30px;
     --font-size-40: 40px;
     --font-size-50: 50px;
 
