text内のtitleが折り返していたため修正

--- a/src/components/elements/ResultText/index.css
+++ b/src/components/elements/ResultText/index.css
@@ -12,7 +12,8 @@
 
 .resultText-title {
     margin: 0;
-    font-size: var(--font-size-20);
+    white-space: nowrap;
+    font-size: var(--font-size-15);
     opacity: 0.5;
     font-weight: var(--font-weight-bold);
 }
