--- a/src/components/elements/Button/index.css
+++ b/src/components/elements/Button/index.css
@@ -5,7 +5,7 @@
     border-radius: var(--radius-10);
     color: var(--color-purple);
 
-    width: fit-content;
+    width: 100%;
     height: 56px;
 
     display: flex;
