--- a/src/components/elements/Meter/index.css
+++ b/src/components/elements/Meter/index.css
@@ -22,13 +22,13 @@
 }
 
 .measure-text-container {
-    margin: 100px 0 80px 0;
+    margin: 50px 0 50px 0;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
 
 .measure-button {
-    display: flex;
-    justify-content: center;
+    margin: 0 auto;
+    width: fit-content;
 }
