--- a/src/components/elements/Title/index.css
+++ b/src/components/elements/Title/index.css
@@ -30,6 +30,7 @@
             font-weight: var(--font-weight-bold);
             margin: 0;
             margin-left: 10px;
+            text-align: center;
         }
 
         & > .button-icon {
