--- a/src/pages/Result/index.css
+++ b/src/pages/Result/index.css
@@ -11,9 +11,9 @@
     flex-direction: row;
     flex-wrap: wrap;
     margin: 0 auto;
-    padding: 24px;
-    gap: 20px;
+    padding: 8px;
     box-sizing: border-box;
+    justify-content: space-around;
     margin-bottom: 60px;
 }
 
@@ -31,14 +31,13 @@
     width: 45%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    gap: 30px;
+    justify-content: space-around;
 }
 .result-buttons-container {
     width: 80%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     margin: 0 auto;
 }
 
