Modalコンポーネントの作成

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
     -moz-osx-font-smoothing: grayscale;
 
     --color-white: #ffffff;
+    --color-red: #ff0000;
     --color-gray: #e2e2e2;
     --color-purple: #6d6af7;
     --color-green-1: #a6f1e0;
