resultに飛べるようにした

--- a/src/components/elements/ResultText/index.css
+++ b/src/components/elements/ResultText/index.css
@@ -23,6 +23,7 @@
     margin-left: auto;
     font-size: var(--font-size-60);
     font-weight: var(--font-weight-black);
+    text-align: right;
 }
 
 .resultText-content-noneType {
