--- a/src/pages/Result/index.css
+++ b/src/pages/Result/index.css
@@ -32,7 +32,7 @@
     width: 45%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 .result-buttons-container {
     width: 80%;
