--- a/src/pages/record/index.css
+++ b/src/pages/record/index.css
@@ -1,62 +1,38 @@
-.top-container {
-  width: 100%;
-  height: 100%;
+.record-box {
+    background-color: var(--color-white);
+    border-radius: var(--radius-10);
+    height: 60vh;
+    width: 1093px;
+    padding: 20px;
+    margin: 0 auto;
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    overflow-y: scroll;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
 }
 
-.top-container-box {
-  width: fit-content;
-  display: flex;
-  flex-direction: column;
-  gap: 112px;
+.record-box:nth-child(n) {
+    width: fit-content;
 }
 
-.record-cards-container {
-  margin-top: 32px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 16px;
-  max-height: 400px; /* ウィンドウの高さを固定 */
-  overflow-y: auto; /* 縦方向にスクロール可能にする */
-  padding: 16px; /* 内側の余白を追加 */
-  border: 1px solid var(--color-gray); /* 枠線を追加 */
-  border-radius: var(--radius-10); /* 角を丸くする */
-  background-color: var(--color-white); /* 背景色を設定 */
+@media (max-width: 1093px) {
+    .record-box {
+        width: 100%;
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
-.record-card {
-  border: 1px solid var(--color-gray);
-  border-radius: var(--radius-10);
-  padding: 16px;
-  background-color: var(--color-white);
-}
-.record-card p {
-  margin: 8px 0;
+@media (max-width: 775px) {
+    .record-box {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 
-.record-card-row {
-  display: flex;
-  justify-content: space-between;
-  gap: 16px;
-  margin-top: 8px;
+.rocord-button {
+    margin: 0 auto;
 }
-
-.record-card-row p {
-  margin: 0;
-  text-align: center;
-}
-
-.record-card strong {
-  display: block;
-  color: #6D6AF7;
-}
-
-.record-card span {
-  display: block;
-  margin-top: 4px;
-  font-size: 1.5rem;
-  font-weight: bold;
+.rocord-button:nth-child(n) {
+    margin-top: 20px;
+    width: fit-content;
 }
