盛り上がり度の算出

--- a/src/components/elements/Modal/index.css
+++ b/src/components/elements/Modal/index.css
@@ -29,6 +29,7 @@
     font-weight: var(--font-weight-bold);
     color: var(--color-red);
     text-align: center;
+    height: 1em;
 }
 
 .modal-box-input {
