--- a/src/pages/Result/index.css
+++ b/src/pages/Result/index.css
@@ -20,16 +20,19 @@
 
 .result-left {
     width: 50%;
-    height: auto;
+    height: 100%;
     background-color: var(--color-white);
     border-radius: var(--radius-10);
     display: flex;
     align-items: center;
     justify-content: center;
+    box-sizing: border-box;
+    
 }
 
 .result-right {
     width: 45%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
