--- a/src/pages/Top/index.css
+++ b/src/pages/Top/index.css
@@ -1,21 +1,20 @@
 .top-container {
     width: 100%;
     height: 100%;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
-
-.top-container-box {
-    width: fit-content;
+.container-header {
+    height: 20%;
+}
+.container-body {
+    width: 80%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     gap: 112px;
 }
 
-.top-logout {
-    position: absolute;
-    top: 20px;
-    right: 20px;
+.container-body:nth-child(n) {
+    width: fit-content;
+    margin: 0 auto;
 }
