--- a/src/components/elements/QuestionCard/index.css
+++ b/src/components/elements/QuestionCard/index.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     padding: 16px;
     border-radius: var(--radius-10);
-    border: 1px solid var(--color-gray);
+    border: 2px solid var(--color-gray);
     background-color: #ffffff;
     width: 300px;
     height: 120px;
@@ -31,17 +31,20 @@
     background-color: var(--color-purple);
     color: var(--color-white);
     padding: 8px;
-    border: none;
+    border: 2px solid var(--color-purple);
     border-radius: var(--radius-3);
     font-size: var(--font-size-10);
     font-weight: var(--font-weight-black);
     cursor: pointer;
-    transition: background-color 0.3s ease;
     width: fit-content;
+    margin-left: auto;
 }
 
 .questionCard-button:hover {
-    background-color: var(--color-purple);
+    background-color: var(--color-white);
+    color: var(--color-purple);
+    border: 2px solid var(--color-purple);
+    box-shadow: var(--shadow-normal);
 }
 
 .card-divider {
