更新ボタンの変更,buttonのカーソルを付与

--- a/src/components/elements/Title/index.css
+++ b/src/components/elements/Title/index.css
@@ -14,6 +14,7 @@
     }
 
     & > .title-button {
+        cursor: pointer;
         margin-left: auto;
         display: flex;
         flex-direction: row;
