--- a/src/components/elements/Meter/index.css
+++ b/src/components/elements/Meter/index.css
@@ -1,4 +1,5 @@
 .meter-container {
+    min-width: 80%;
     width: 80%;
     margin: 0 auto;
 
@@ -25,9 +26,18 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    flex-wrap: wrap;
+    width: 100%;
 }
 
 .measure-button {
     margin: 0 auto;
     width: fit-content;
+}
+
+@media screen and (max-width: 652px) {
+    .volume-container {
+        margin-top: 60px;
+        height: 100px;
+    }
 }
